Add system.tap and system.yuml for debugging

--- a/ASPNET5-Angular2-Boilerplate/src/ASPNET5-Angular2-Boilerplate.Web/wwwroot/index.html
+++ b/ASPNET5-Angular2-Boilerplate/src/ASPNET5-Angular2-Boilerplate.Web/wwwroot/index.html
@@ -5,6 +5,7 @@
     <title>Angular 2 with ASP.NET 5</title>
     <script src="libs/angular2-polyfills.js"></script>
     <script src="libs/system.src.js"></script>
+    <script src="libs/system.yuml.js"></script>
     <script src="libs/rx.js"></script>
     <script src="libs/angular2.dev.js"></script>
     <script>
